--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	</head>
 	<body>
 		<h1>Main page</h1>
-		<a href=index.html>Tactical Frontier Demo</a>
+		<a href=/docs/game-tf-main/index.html>Tactical Frontier Demo</a>
 	</body>
 </html>
