--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h1>Main page</h1>
 		<a href=/docs/game-tf-main>Tactical Frontier Demo</a>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 		<script>
 var data1
