--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<script>
 var data1
-			$.getJSON('http://ipinfo.io', function(data){
+			$.getJSON('https://ipinfo.io', function(data){
 
 data1 = data
 
